# Highlight-Keywords

./: !)Add a system-level context menu.bat  !)添删右键菜单.bat  .gitignore  README.md  highlight_keywords.py  pyproject.toml  requirements.txt
assets/: icon.psd
src/: KEYWORDS.txt  Ui_highlight_keywords.py  cli.py  cmd_text_edit.py  gui.py  highlight_keywords.ui  main.py  strategy.py
tests/: test copy.txt  test copy_highlighted.html  test copy_highlighted.md  test copy_highlighted.txt  test.txt  test_highlighted.html  test_highlighted.md  test_highlighted.txt
